--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
+apply plugin: 'io.objectbox'
+
 android {
     compileSdkVersion 27
     defaultConfig {
@@ -44,9 +46,8 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:1.1.1"
     // ?
     kapt "android.arch.lifecycle:compiler:1.1.1"
-    // Room
-    implementation "android.arch.persistence.room:runtime:1.1.1"
-    kapt "android.arch.persistence.room:compiler:1.1.1"
+
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
